--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('img/bg-desktop.webp');
+    background: url('img/images.jpeg');
     font-family: Bai Jamjuree;
 }
 
@@ -54,12 +54,12 @@ body {
 
 .cartao__conteudo__pergunta p {
     color: var(--text-color);
-    font-weight: 500;
+    font-weight: 300;
 }
 
 .cartao__conteudo__resposta p {
     color: var(--card-back-color);
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .cartao.active .cartao__conteudo {
@@ -77,7 +77,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 255, 55, 0.911);
+    background-color: rgba(94, 36, 201, 0.911);
     border: 4px solid var(--card-back-color);
 }
 
