--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #f7f7f7;
-    --card-front-color: #00000086;
-    --card-back-color: #000000;
+    --card-front-color: #dd50d686;
+    --card-back-color: #f883f8;
 }
 
 body {
@@ -77,7 +77,7 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 255, 55, 0.911);
+    background-color: rgba(255, 156, 255, 0.911);
     border: 4px solid var(--card-back-color);
 }
 
