--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #f7f7f7;
     --card-front-color: #dd50d686;
-    --card-back-color: #f883f8;
+    --card-back-color: #eeeeee;
 }
 
 body {
